--- a/ClientApp/css/site.css
+++ b/ClientApp/css/site.css
@@ -1,3 +1,17 @@
+html {
+    font-size: 15px;
+}
+
+.wrap{
+    padding:20px 20px 10px 0;
+    height: 100%;
+}
+
+.side-panel {
+    border-left: 1px solid #e1e1e1;
+    padding-left: 15px;
+}
+
 .main-nav li .glyphicon {
     margin-right: 10px;
 }
@@ -30,7 +44,7 @@
     /* On small screens, convert the nav menu to a vertical sidebar */
     .main-nav {
         height: 100%;
-        width: calc(20% - 20px);
+        width: calc(16% - 20px);
     }
     .main-nav .navbar {
         border-radius: 0px;
